tests/sksl/errors/BadModifiers.glsl
### Compilation failed:

error: 1: 'const' is not permitted here
error: 1: 'in' is not permitted here
error: 1: 'out' is not permitted here
error: 1: 'uniform' is not permitted here
error: 1: 'flat' is not permitted here
error: 1: 'noperspective' is not permitted here
error: 1: 'varying' is not permitted here
error: 1: functions cannot be both 'inline' and 'noinline'
error: 4: 'uniform' is not permitted here
error: 4: 'flat' is not permitted here
error: 4: 'noperspective' is not permitted here
error: 4: 'sk_has_side_effects' is not permitted here
error: 4: 'varying' is not permitted here
error: 4: 'inline' is not permitted here
error: 4: 'noinline' is not permitted here
error: 6: 'in uniform' variables only permitted within fragment processors
error: 6: 'varying' is only permitted in runtime effects
error: 6: 'sk_has_side_effects' is not permitted here
error: 6: 'inline' is not permitted here
error: 6: 'noinline' is not permitted here
error: 6: 'const' variables must be initialized
21 errors
